--- a/src/app/views/oferta/oferta.component.html
+++ b/src/app/views/oferta/oferta.component.html
@@ -53,7 +53,7 @@
   </div>
 </ion-content>
 
-<!-- <ion-footer>
+<ion-footer>
   <ion-toolbar class="scrollable-toolbar">
     <div class="scroll-hint">
       <ion-icon name="arrow-forward-outline"></ion-icon>
@@ -97,4 +97,4 @@
       </div>
     </div>
   </ion-toolbar>
-</ion-footer> -->
+</ion-footer>
