--- a/src/app/views/oferta/oferta.component.scss
+++ b/src/app/views/oferta/oferta.component.scss
@@ -8,9 +8,7 @@
     color: #fff;
   }
 
-
-
-
+// footer
 
 /* Toolbar scrollable */
 .scrollable-toolbar {
@@ -68,7 +66,7 @@
   align-items: center;
   justify-content: center;
   min-width: 80px; /* Ancho mínimo de cada tab */
-  color: #6a1b9a; /* Color violeta para los íconos y texto */
+  color: #6a1b9a;
   font-size: 12px;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -76,12 +74,12 @@
   ion-icon {
     font-size: 24px;
     margin-bottom: 4px;
-    color: #6a1b9a; /* Iconos violeta */
+    color: rgb(49, 47, 47);
     transition: color 0.3s ease;
   }
 
   ion-label {
-    color: #6a1b9a;
+    color: #0a010f;
     white-space: nowrap;
   }
 
@@ -108,7 +106,7 @@
 }
 
 .scrollable-tabs::-webkit-scrollbar-thumb {
-  background-color: #6a1b9a; /* Color del "thumb" */
+  background-color: #6a1b9a;
   border-radius: 10px;
 }
 
