--- a/src/app/views/carrito-compras/carrito-compras.component.html
+++ b/src/app/views/carrito-compras/carrito-compras.component.html
@@ -2,7 +2,7 @@
 
 <ion-header>
   <ion-toolbar class="custom-toolbar">
-    <ion-title>Mis Compras</ion-title>
+    <ion-title>Carrito de Compra</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -63,7 +63,7 @@
     </div>
 
     <!-- Botón continuar -->
-    <button class="continue-btn">Continuar compra</button>
+    <button class="continue-btn"  (click)="navigateTo('tienda')">Continuar compra</button>
   </div>
 
 </ion-content>
@@ -101,7 +101,7 @@
 
       <!-- Nueva Tab: Perfil -->
       <div class="tab-item">
-        <ion-icon name="person-outline" (click)="navigateTo('perfil')"></ion-icon>
+        <ion-icon name="person-outline" (click)="navigateTo('mi-perfil')"></ion-icon>
         <ion-label>Perfil</ion-label>
       </div>
 
@@ -113,8 +113,8 @@
 
       <!-- Nueva Tab: Configuración -->
       <div class="tab-item">
-        <ion-icon name="settings-outline" (click)="navigateTo('perfil')"></ion-icon>
-        <ion-label>Configuración</ion-label>
+        <ion-icon name="settings-outline" (click)="navigateTo('mi-cuenta')"></ion-icon>
+        <ion-label>Más</ion-label>
       </div>
 
       <!-- Nueva Tab: Ayuda -->
@@ -125,4 +125,3 @@
     </div>
   </ion-toolbar>
 </ion-footer>
-
