--- a/src/app/views/mi-cuenta/mi-cuenta.component.html
+++ b/src/app/views/mi-cuenta/mi-cuenta.component.html
@@ -10,7 +10,7 @@
     <ion-icon name="help-circle-outline" slot="start"></ion-icon>
     <ion-label>Mis Subscripciones</ion-label>
   </ion-item>
-  <ion-button expand="block" class="buy-button">
+  <ion-button expand="block" class="buy-button" (click)="navigateTo('elección')">
     <ion-label>Vender</ion-label>
   </ion-button>
 
@@ -20,7 +20,7 @@
       <ion-icon name="help-circle-outline" slot="start"></ion-icon>
       <ion-label>Preguntas</ion-label>
     </ion-item>
-    <ion-item button>
+    <ion-item button (click)="navigateTo('compras')">
       <ion-icon name="bag-handle-outline" slot="start"></ion-icon>
       <ion-label>Mis Compras</ion-label>
     </ion-item>
@@ -68,7 +68,7 @@
 
   <ion-list lines="none" class="options-list">
     <h1 class="section-title">Configuración</h1>
-    <ion-item button>
+    <ion-item button (click)="navigateTo('mi-perfil')">
       <ion-icon name="person-outline" slot="start"></ion-icon>
       <ion-label>Mi Perfil</ion-label>
     </ion-item>
@@ -113,7 +113,7 @@
 
       <!-- Nueva Tab: Perfil -->
       <div class="tab-item">
-        <ion-icon name="person-outline" (click)="navigateTo('perfil')"></ion-icon>
+        <ion-icon name="person-outline" (click)="navigateTo('mi-perfil')"></ion-icon>
         <ion-label>Perfil</ion-label>
       </div>
 
@@ -125,8 +125,8 @@
 
       <!-- Nueva Tab: Configuración -->
       <div class="tab-item">
-        <ion-icon name="settings-outline" (click)="navigateTo('perfil')"></ion-icon>
-        <ion-label>Configuración</ion-label>
+        <ion-icon name="settings-outline" (click)="navigateTo('mi-cuenta')"></ion-icon>
+        <ion-label>Más</ion-label>
       </div>
 
       <!-- Nueva Tab: Ayuda -->
@@ -137,4 +137,3 @@
     </div>
   </ion-toolbar>
 </ion-footer>
-
