--- a/src/app/views/perfil/perfil.component.html
+++ b/src/app/views/perfil/perfil.component.html
@@ -54,7 +54,7 @@
       <ion-icon name="card-outline" slot="start"></ion-icon>
       <ion-label>Suscripciones</ion-label>
     </ion-item>
-    <ion-item button>
+    <ion-item button  (click)="navigateTo('mi-cuenta')">
       <ion-icon name="person-outline" slot="start"></ion-icon>
       <ion-label>Mi cuenta</ion-label>
     </ion-item>
@@ -95,7 +95,7 @@
 
       <!-- Nueva Tab: Perfil -->
       <div class="tab-item">
-        <ion-icon name="person-outline" (click)="navigateTo('perfil')"></ion-icon>
+        <ion-icon name="person-outline" (click)="navigateTo('mi-perfil')"></ion-icon>
         <ion-label>Perfil</ion-label>
       </div>
 
@@ -107,8 +107,8 @@
 
       <!-- Nueva Tab: Configuración -->
       <div class="tab-item">
-        <ion-icon name="settings-outline" (click)="navigateTo('perfil')"></ion-icon>
-        <ion-label>Configuración</ion-label>
+        <ion-icon name="settings-outline" (click)="navigateTo('mi-cuenta')"></ion-icon>
+        <ion-label>Más</ion-label>
       </div>
 
       <!-- Nueva Tab: Ayuda -->
