--- a/src/app/views/detalle/detalle.component.html
+++ b/src/app/views/detalle/detalle.component.html
@@ -80,11 +80,11 @@
   </div>
 
   <div class="action-buttons">
-    <ion-button class="buy-button">
+    <ion-button class="buy-button" (click)="navigateTo('carrito')">
       <ion-label>Comprar ahora</ion-label>
     </ion-button>
 
-    <ion-button class="add-button">
+    <ion-button class="add-button" (click)="navigateTo('carrito')">
       <ion-icon name="cart-outline"></ion-icon>
       <ion-label>Agregar al carrito</ion-label>
     </ion-button>
