--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,14 +8,15 @@
       <ion-icon name="cart-outline" class="icon-cart" (click)="navigateTo('carrito')"></ion-icon>
     </div>
   <p class="address-text" (click)="navigateTo('login')" *ngIf="!isLoggedIn">Login de prueba</p>
-    <!-- Mostrar ubicación -->
-    <!-- Mostrar ubicación -->
-    <p class="address-text" *ngIf="isLoggedIn">
-      Ubicación: {{ location }}
-    </p>
+  
   </ion-toolbar>
 </ion-header>
 
+
+<!-- Mostrar ubicación flotante más abajo -->
+<p class="floating-location" *ngIf="isLoggedIn">
+  Ubicación: {{ location }}
+</p>
 
 <ion-content>
   <!-- Carrusel de imágenes -->
