--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -771,3 +771,16 @@ margin-top:-17px;
   background-color: #6a1b9a;
   border-radius: 10px;
 }
+
+// ------------
+
+.floating-location {
+  position: fixed; /* Posiciona el elemento en relación con la ventana del navegador */
+  bottom: 560px; /* Espaciado desde la parte inferior de la ventana */
+  background-color: rgba(255, 255, 255, 0.8); /* Fondo semitransparente */
+  padding: 10px 15px; /* Espaciado interno */
+  border-radius: 10px; /* Bordes redondeados */
+  font-size: 14px; /* Tamaño de fuente */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); /* Sombra para resaltar */
+  z-index: 1000; /* Para asegurarte de que quede por encima de otros elementos */
+}
