--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -46,7 +46,7 @@ display: flex;
 flex-direction: column;
 align-items: center;
 padding: 4px 8px; /* Reducido verticalmente para hacerla más fina */
-height: 70px;
+height: 88px;
 }
 
 /* Contenedor de búsqueda y carrito */
@@ -775,12 +775,17 @@ margin-top:-17px;
 // ------------
 
 .floating-location {
-  position: fixed; /* Posiciona el elemento en relación con la ventana del navegador */
-  bottom: 560px; /* Espaciado desde la parte inferior de la ventana */
-  background-color: rgba(255, 255, 255, 0.8); /* Fondo semitransparente */
-  padding: 10px 15px; /* Espaciado interno */
-  border-radius: 10px; /* Bordes redondeados */
-  font-size: 14px; /* Tamaño de fuente */
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); /* Sombra para resaltar */
-  z-index: 1000; /* Para asegurarte de que quede por encima de otros elementos */
+  position: fixed;
+  bottom: 570px; /* Ajusta este valor según sea necesario */
+  left: 20px; /* Separación desde el lado izquierdo */
+  background-color: #4a008e;
+  padding: 8px 12px;
+  border-radius: 20px; /* Bordes redondeados */
+  font-size: 14px;
+  font-weight: bold; /* Hace que el texto sea más visible */
+  color: #fff; /* Color del texto */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  display: flex; /* Para alinear ícono y texto */
+  align-items: center;
 }
