--- a/src/app/views/tienda/tienda.component.scss
+++ b/src/app/views/tienda/tienda.component.scss
@@ -562,9 +562,10 @@ font-size: 12px;
     margin-bottom: 12px;
 
     img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 4px;
+      width: 200px; /* Ajusta al tamaño deseado */
+  height: 200px;
+  object-fit: cover; /* Recorta la imagen para llenar el espacio */
+  border-radius: 10px;
     }
   }
 
@@ -694,3 +695,6 @@ font-size: 12px;
   background-color: #6a1b9a; /* Color del "thumb" */
   border-radius: 10px;
 }
+
+
+
