--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -469,7 +469,7 @@
         <ion-label>Perfil</ion-label>
       </div>
 
-      <!-- Nueva Tab: Favoritos -->
+      <!-- Nueva Tab: Favoritos1 -->
       <div class="tab-item">
         <ion-icon name="heart-outline" (click)="navigateTo('favoritos')"></ion-icon>
         <ion-label>Favoritos</ion-label>
