--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -294,7 +294,7 @@ text-align: center;
   }
 
   .card-footer {
-    background-color: #00e0ff;
+    background-color: #eae1e1;
     padding: 10px;
 
     .subscribe-button {
@@ -774,18 +774,49 @@ margin-top:-17px;
 
 // ------------
 
-.floating-location {
+/* Estilo general */
+
+
+/* Para pantallas pequeñas (máximo 768px de ancho, típico en celulares) */
+@media screen and (max-width: 768px) {
+ .floating-location {
   position: fixed;
-  bottom: 570px; /* Ajusta este valor según sea necesario */
-  left: 20px; /* Separación desde el lado izquierdo */
+  bottom: 564px;
   background-color: #4a008e;
   padding: 8px 12px;
-  border-radius: 20px; /* Bordes redondeados */
+  border-radius: 20px;
   font-size: 14px;
-  font-weight: bold; /* Hace que el texto sea más visible */
-  color: #fff; /* Color del texto */
+  font-weight: bold;
+  color: #fff;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 1000;
-  display: flex; /* Para alinear ícono y texto */
+  display: flex;
   align-items: center;
 }
+}
+
+
+.carousel-container1 {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.carousel-slide1 {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  width: 100%; 
+}
+
+.slide1 {
+  min-width: 100%;
+  box-sizing: border-box;
+}
+
+.carousel-slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
