--- a/src/app/views/tienda/tienda.component.scss
+++ b/src/app/views/tienda/tienda.component.scss
@@ -54,7 +54,6 @@ align-items: center;
 width: 100%; /* Ocupa todo el ancho */
 max-width: 600px; /* Ancho máximo del contenedor */
 gap: 8px; /* Espaciado entre búsqueda y carrito */
-margin-top: 30px;
 }
 
 /* Barra de búsqueda más fina */
@@ -698,3 +697,66 @@ font-size: 12px;
 
 
 
+/* Para pantallas pequeñas (máximo 768px de ancho, típico en celulares) */
+@media screen and (max-width: 768px) {
+ .floating-location {
+  position: fixed;
+  bottom: 564px;
+  background-color: #4a008e;
+  padding: 8px 12px;
+  border-radius: 20px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #fff;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+}
+}
+
+
+/* Estilo del ion-toolbar */
+ion-toolbar.custom-toolbar {
+--background: #4a008e; /* Fondo púrpura */
+display: flex;
+flex-direction: column;
+align-items: center;
+padding: 4px 8px; /* Reducido verticalmente para hacerla más fina */
+height: 88px;
+}
+
+
+
+/* Barra de búsqueda más fina */
+.search-container {
+display: flex;
+align-items: center;
+background-color: white;
+border-radius: 20px; /* Ligeramente menos redondeado */
+padding: 4px 12px; /* Menor espaciado interno vertical */
+flex: 1; /* Ocupa el máximo espacio horizontal */
+box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra sutil ajustada */
+height: 32px; /* Grosor reducido de la barra */
+}
+
+/* Icono de búsqueda */
+.icon-search {
+color: gray;
+font-size: 20px;
+margin-right: 6px; /* Espaciado entre icono y input */
+}
+
+/* Icono del carrito */
+.icon-cart {
+color: white;
+font-size: 24px;
+cursor: pointer;
+line-height: 1; /* Asegura alineación vertical con el grosor reducido */
+}
+
+// ion-input {
+// font-size: 14px;
+// height: 100%;
+// line-height: 1;
+// }
