--- a/src/app/views/detalle/detalle.component.html
+++ b/src/app/views/detalle/detalle.component.html
@@ -14,70 +14,84 @@
 </ion-header>
 
 <ion-content>
-  <div class="product-header">
-    <p class="product-title">Cubierta Fate Sentiva 195 65 15</p>
-  </div>
+  <div *ngIf="product$ | async as product">
+    <!-- Encabezado del producto -->
+    <div class="product-header">
+      <p class="product-title">{{ product.title }}</p>
+    </div>
 
-  <div
-    class="carousel-container"
-    (touchstart)="onTouchStart($event)"
-    (touchmove)="onTouchMove($event)"
-    (touchend)="onTouchEnd()"
-  >
-    <div
-      class="carousel-track"
-      [style.transform]="'translateX(' + -currentIndex * 100 + '%)'"
+    <!-- Carrusel de imágenes -->
+    <!-- <div
+      class="carousel-container"
+      (touchstart)="onTouchStart($event)"
+      (touchmove)="onTouchMove($event)"
+      (touchend)="onTouchEnd()"
     >
-      <div class="carousel-slide" *ngFor="let slide of slides">
-        <img [src]="slide.image" [alt]="slide.alt" class="slider-image" />
+      <div
+        class="carousel-track"
+        [style.transform]="'translateX(' + -currentIndex * 100 + '%)'"
+      >
+        <div class="carousel-slide" *ngFor="let image of product.images">
+          <img [src]="image" [alt]="product.title" class="slider-image" />
+        </div>
+      </div>
+    </div> -->
+
+    <div class="carousel-container">
+      <!-- Contenedor principal que agrupa la imagen y los íconos -->
+      <div class="carousel-content">
+        <!-- Imagen del producto -->
+        <div class="carousel-slide">
+          <img [src]="product.images" [alt]="product.title" class="slider-image" />
+        </div>
 
         <!-- Botón de Favorito (arriba a la derecha) -->
         <div class="favorite-icon">
-          <!-- <i class="fa fa-heart"></i> -->
-              <ion-icon name="heart" slot="icon-only"></ion-icon>
-
-          <!-- Ícono de corazón -->
+          <ion-icon name="heart" slot="icon-only"></ion-icon>
         </div>
 
         <!-- Botón de Compartir (abajo a la derecha) -->
         <div class="share-icon">
-          <!-- <i class="fa fa-share-alt"></i> -->
-              <ion-icon name="share-social" slot="icon-only"></ion-icon>
-
-          <!-- Ícono de compartir -->
+          <ion-icon name="share-social" slot="icon-only"></ion-icon>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="price-section">
-    <!-- Precio original tachado -->
-    <p class="original-price">$156.000</p>
 
-    <!-- Precio con descuento y porcentaje en la misma línea -->
-    <div class="discount-line">
-      <span class="discount-price">$120.000</span>
-      <span class="discount-percentage">30% OFF</span>
+
+    <!-- Sección de precio -->
+    <div class="price-section">
+      <!-- <p class="original-price">
+        ${{ product.price }}
+      </p> -->
+      <div class="discount-line">
+        <span class="discount-price">
+          ${{ product.price }}
+        </span>
+        <!-- <span class="discount-percentage" *ngIf="product.discountPercentage">
+          {{ product.discountPercentage }}% OFF
+        </span> -->
+      </div>
+      <!-- <p class="rating">
+        {{ product.rating || 0 }}
+        <ion-icon name="star" class="star-icon"></ion-icon>
+        <ion-icon name="star-half-outline" class="star-icon"></ion-icon>
+      </p> -->
+      <div class="stock-section">
+        <p>Stock disponible:</p>
+        <ion-chip color="success">
+          <ion-label>{{ product.stock }} unidades</ion-label>
+        </ion-chip>
+      </div>
     </div>
 
-    <!-- Calificación con estrellas -->
-    <p class="rating">
-      4.5
-      <ion-icon name="star" class="star-icon"></ion-icon>
-      <ion-icon name="star" class="star-icon"></ion-icon>
-      <ion-icon name="star" class="star-icon"></ion-icon>
-      <ion-icon name="star" class="star-icon"></ion-icon>
-      <ion-icon name="star-half-outline" class="star-icon"></ion-icon>
-    </p>
-
-    <!-- Stock disponible -->
-    <div class="stock-section">
-      <p>Stock disponible:</p>
-      <ion-chip color="success">
-        <ion-label>10 unidades</ion-label>
-      </ion-chip>
-    </div>
+    <!-- Descripción -->
+    <!-- <div class="product-description">
+      <h3>Descripción</h3>
+      <p>{{ product.description }}</p>
+    </div> -->
   </div>
+
 
   <div class="action-buttons">
     <ion-button class="buy-button" (click)="navigateTo('carrito')">
