--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -354,26 +354,25 @@
     </div>
   </div>
 
-  <div class="marcas-section" *ngIf="isLoggedIn">
-    <div class="marcas-scroll-container">
-      <div class="marcas-wrapper">
-        <ion-grid>
-          <ion-row>
-            <ion-col size="12" class="marcas-carousel">
-              <div class="marcas-carousel-inner">
-                <!-- <ion-card class="marca-card" *ngFor="let marca of marcas"> -->
-                <ion-card class="marca-card" >
-                  <!-- <img [src]="marca.imagen" alt="{{ marca.nombre }}" /> -->
-      <img src="../../assets/icon/celular-samsung-a04e-32-3gb-copper-ean-731835-removebg-preview.png" alt="Banner 2" class="banner-image" />
-
-                </ion-card>
-              </div>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
+ <div class="marcas-section" *ngIf="isLoggedIn">
+  <div class="marcas-scroll-container">
+    <div class="marcas-wrapper">
+     <ion-grid>
+  <ion-row>
+    <ion-col size="12" class="marcas-carousel">
+      <div class="marcas-carousel-inner">
+        <ion-card class="marca-card" *ngFor="let marca of marcas$ | async">
+          <img [src]="marca.imagen" alt="{{ marca.nombre }}" />
+        </ion-card>
       </div>
+    </ion-col>
+  </ion-row>
+</ion-grid>
+
     </div>
   </div>
+</div>
+
 
   <!-- Footer -->
   <footer class="custom-footer">
