--- a/src/app/views/notificaciones/notificaciones.component.html
+++ b/src/app/views/notificaciones/notificaciones.component.html
@@ -81,7 +81,7 @@
         <ion-label>Más</ion-label>
       </div>
 
-      <!-- Nueva Tab: Ayuda -->
+      <!-- Nueva Tab: Ayuda2 -->
       <div class="tab-item">
         <ion-icon name="help-circle-outline" (click)="navigateTo('ayuda')"></ion-icon>
         <ion-label>Ayuda</ion-label>
